<?xml version="1.0"?>
<package format="3">
  <name>my_tcp_sender</name>
  <version>0.0.1</version>
  <description>A ROS 2 package to send messages via TCP</description>
  <maintainer email="samar@example.com">samar</maintainer>
  <license>License Type</license>

  <depend>rclpy</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
